@@ -6,6 +6,7 @@ import com.fmi.domain.comment.converter.CommentConverter;
 import com.fmi.domain.comment.data.Comment;
 import com.fmi.domain.comment.repository.CommentRepository;
 import com.fmi.domain.comment.response.CommentResponse;
+import com.fmi.domain.comment.response.CommentSliceResponse;
 import com.fmi.domain.comment.web.dto.CreateCommentDto;
 import com.fmi.domain.notification.data.enums.NotificationType;
 import com.fmi.domain.notification.service.NotificationService;
@@ -13,6 +14,8 @@ import com.fmi.domain.post.data.Post;
 import com.fmi.domain.post.repository.PostRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Slice;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -186,14 +189,30 @@ public class CommentService {
         return commentConverter.toCommentResponse(comment);
     }
 
-    @Transactional
-    public List<CommentResponse> getComment(Long postId) {
 
-        List<Comment> comments = commentRepository.findByPostId(postId);
+    @Transactional(readOnly = true)
+    public CommentSliceResponse getComments(Long postId, Long cursor, int size) {
 
-        return comments.stream()
+        Slice<Comment> comments;
+
+        if (cursor == null) {
+            comments = commentRepository.findTopByPostIdOrderByIdDesc(postId, Pageable.ofSize(size));
+        } else {
+            comments = commentRepository.findByPostIdAndIdLessThanOrderByIdDesc(postId, cursor, Pageable.ofSize(size));
+        }
+
+        Long nextCursor  = comments.hasNext()
+                ? comments.getContent().get(comments.getContent().size() - 1).getId()
+                : null;
+
+
+        List<CommentResponse> result = comments.stream()
+                .limit(size)
                 .map(commentConverter::toCommentResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return new CommentSliceResponse(result, comments.hasNext(), nextCursor);
     }
+
 }
 
